# storyville

./: .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  JUSTFILE_COMMANDS.md  Justfile  PARALLEL_TEST_EXECUTION_ANALYSIS.md  README.md  SLOW_TEST_OPTIMIZATION_FINAL.md  TEST_OPTIMIZATION_SUMMARY.md  TODO.md  WATCHER_TEST_OPTIMIZATION.md  bs-config.json  conftest.py  old.pyproject.toml  package.json  pyproject.toml  run_livereload.py
.github/workflows/: ci.yml  pages.yml  pypi.yml
agent-os/: config.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
docs/: api-reference.md  architecture.md  cli-reference.md  conf.py  getting-started.md  hot-reload.md  index.md  pytest-plugin.md  static.md  themed-stories.md  usage.md  writing-stories.md
examples/: __init__.py
examples/complete/: README.md  stories.py
examples/context/: README.md  __init__.py  stories.py
examples/custom_registries/: README.md  __init__.py  stories.py
examples/huge/: stories.py
examples/huge_assertions/: __init__.py  stories.py
examples/inheritance/: README.md  stories.py
examples/minimal/: README.md  stories.py
examples/no_sections/: README.md  stories.py
examples/scannables/: README.md  __init__.py  stories.py
examples/singletons/: README.md  __init__.py  stories.py
examples/templates/: README.md  stories.py
scripts/: benchmark_parallel.sh  measure_playwright_tests.sh
specs/2025-11-16-new-feature/: spec.md
specs/2025-11-16-site-view/: tasks.md
src/storytime/: __init__.py  __main__.py  app.py  build.py  models.py  nodes.py  pytest_plugin.py  section.py  site.py  stories.py  story.py  subinterpreter_pool.py  subject.py  utils.py  watchers.py  websocket.py
src/storyville/: __main__.py  app.py  build.py  models.py  stories.py  watchers.py  websocket.py
tests/: __init__.py  conftest.py  nodes_test.py  test_app.py  test_build.py  test_build_instrumentation.py  test_build_integration.py  test_build_themed_stories.py  test_catalog_module_structure.py  test_change_classification.py  test_client_page_tracking.py  test_css_visual_refinements.py  test_examples.py  test_granular_change_detection_integration.py  test_hotreload_integration.py  test_init.py  test_integration_seed.py  test_layout_structure.py  test_models.py  test_navigation_integration.py  test_nodes.py  test_pathlib_app_watchers.py  test_pathlib_cli_build.py  test_pathlib_core.py  test_pathlib_verification.py  test_playwright_integration.py  test_pytest_plugin_config.py  test_pytest_plugin_discovery.py  test_pytest_plugin_items.py  test_pytest_plugin_rendering.py  test_pytest_plugin_reporting.py  test_section.py  test_seed_cli.py  test_seed_generation.py  test_seed_templates.py  test_sidebar_collapse_behavior.py  test_sidebar_toggle_button.py  test_site.py  test_static_paths_final.py  test_story.py  (+11 more)
tests/assertions/: test_helpers_foundation.py  test_helpers_getallby.py  test_helpers_simple.py
tests/catalog/: helpers_test.py  test_catalog_helpers.py  test_catalog_models.py  test_catalog_views.py
tests/components/: test_component_resource_path.py  test_layout.py  test_themed_story.py
tests/dom_morphing/: test_dom_morphing.py
tests/examples/: test_minimal_themed_layout.py
tests/section/: test_section_models.py  test_section_views.py
tests/site/: test_site_helpers.py  test_site_models.py  test_site_views.py
tests/static/: ws_test.html
tests/static_assets/: __init__.py  test_copying.py  test_discovery.py  test_integration.py  test_models.py  test_paths.py  test_rewriting.py  test_validation.py
tests/story/: test_story.py  test_story_assertions_badges.py  test_story_assertions_core.py  test_story_assertions_edge_cases.py  test_story_assertions_execution.py  test_story_assertions_integration.py  test_story_assertions_model.py  test_story_instance.py  test_story_models.py  test_story_views.py
tests/subinterpreter/: __init__.py  test_build_execution.py  (+5 more)
(+692 files in other folders)
