[project]
name = "storytime"
version = "0.1.0"
description = "Story-based component development for Python."
authors = [{ name = "Paul Everitt", email = "pauleveritt@me.com" }]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/pauleveritt/storytime"
repository = "https://github.com/pauleveritt/storytime"
documentation = "https://storytime.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "click>=8.1.7",
    "hopscotch>=0.3.1",
    "tagged>=0.0.2",
    "uvicorn>=0.30.6",
    "venusian>=3.0.1",
    "viewdom>=0.6.4",
    "watchfiles>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "beautifulsoup4>=4.12.3",
    "black>=24.8.0",
    "furo>=2024.8.6",
    "httpx>=0.27.2",
    "mypy>=1.11.2",
    "myst-parser>=4.0.0",
    "pytest>=8.3.2",
    "sphinx-autobuild>=2024.4.16",
    "sphinx>=8.0.2",
]

[project.scripts]
storytime = "storytime.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["storytime"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    "bs4",
]
ignore_missing_imports = true
