[project]
name = "storytime"
version = "0.1.0"
description = "Story-based component development for Python."
authors = [{ name = "Paul Everitt", email = "pauleveritt@me.com" }]
license = "MIT"
repository = "https://github.com/pauleveritt/storytime"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.14"
dependencies = [
    "starlette>=0.50.0",
    "tdom",
    "uvicorn>=0.38.0",
    "watchfiles>=1.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:doctest"

[tool.uv.sources]
aria-testing = { path = "../../t-strings/aria-testing" }
tdom = { path = "../../t-strings/tdom" }

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "aria-testing",
    "coverage>=7.11.2",
    "httpx>=0.28.1",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
    "ty>=0.0.1a25",
]

[project.scripts]
storytime = "storytime.__main__:main"
